--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "start": "sanity start",
     "build": "sanity build",
     "deploy": "sanity deploy",
-    "deploy-graphql": "sanity graphql deploy"
+    "deploy-graphql": "sanity graphql deploy",
+    "biome:check": "pnpm biome check --config-path biome.jsonc",
+    "biome:apply": "pnpm biome check --config-path biome.jsonc --write",
+    "biome:apply-unsafe": "pnpm run biome:apply --unsafe"
   },
-  "keywords": [
-    "sanity"
-  ],
+  "keywords": ["sanity"],
   "dependencies": {
     "@sanity/icons": "^3.4.0",
     "@sanity/ui": "^2.8.9",
@@ -25,6 +26,7 @@
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.2",
     "@sanity/eslint-config-studio": "^4.0.0",
     "@types/react": "^18.0.25",
     "eslint": "^8.6.0",
